# HI3519DV500_face_detection_yolov8

./: CMakeLists.txt  README.md  build.sh
inc/: model_process.h  sample_process.h  utils.h
model/: atc_perf.csv  calibration_param.txt  cnn_net_tree.dot  cnn_net_tree_adapt.dot  cnn_net_tree_after_tiling_seg_0.dot  cnn_net_tree_org.dot  cnn_net_tree_parser.dot  cnn_net_tree_shape5d_seg_0.dot  forcheck.txt
script/: compile_model.sh  drawbox.py  transferPic.py
src/: CMakeLists.txt  main.cpp  model_process.cpp  sample_process.cpp  utils.cpp
